force-app/main/default/objects/Pipeline__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Pipelines</relationshipLabel>
    <relationshipName>Pipeline_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>