force-app/main/default/objects/Pipeline__c/fields/Current_Commit_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Commit_Id__c</fullName>
    <label>Current Commit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>