force-app/main/default/objects/Pipeline__c/fields/Current_Deployment_Request__c.field-meta.xml
<CustomField>
    <fullName>Current_Deployment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Deployment Request</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Pipelines</relationshipLabel>
    <relationshipName>Pipeline_Current_Deployment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>