force-app/main/default/objects/Pipeline__c/fields/Current_Environment__c.field-meta.xml
<CustomField>
    <fullName>Current_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Environment</label>
    <referenceTo>Deployment_Environment__c</referenceTo>
    <relationshipLabel>Pipelines (Current Environment)</relationshipLabel>
    <relationshipName>Pipeline_Current_Environments</relationshipName>
    <type>Lookup</type>
</CustomField>