force-app/main/default/objects/Pipeline__c/fields/Current_PR_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_PR_Number__c</fullName>
    <label>Current PR Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>