force-app/main/default/objects/Pipeline__c/fields/Current_PR_URL__c.field-meta.xml
<CustomField>
    <fullName>Current_PR_URL__c</fullName>
    <label>Current PR URL</label>
    <type>Url</type>
</CustomField>