force-app/main/default/objects/Pipeline__c/fields/Current_Repository__c.field-meta.xml
<CustomField>
    <fullName>Current_Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Repository</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Pipelines</relationshipLabel>
    <relationshipName>Pipeline_Current_Repositorys</relationshipName>
    <type>Lookup</type>
</CustomField>