force-app/main/default/objects/Pipeline__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <label>Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>DEV → QA</fullName>
            </value>
            <value>
                <fullName>QA Approval</fullName>
            </value>
            <value>
                <fullName>QA → UAT</fullName>
            </value>
            <value>
                <fullName>UAT Approval</fullName>
            </value>
            <value>
                <fullName>UAT → Production</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Rollback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>