force-app/main/default/objects/Pipeline__c/fields/Current_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current User Story</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Pipelines</relationshipLabel>
    <relationshipName>Pipeline_Current_User_Storys</relationshipName>
    <type>Lookup</type>
</CustomField>