force-app/main/default/objects/Pipeline__c/fields/Deployment_Runtime_Status__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Runtime_Status__c</fullName>
    <label>Deployment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Deploying</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Rollback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>