force-app/main/default/objects/Pipeline__c/fields/Execution_Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Execution_Completed_On__c</fullName>
    <label>Execution Completed On</label>
    <type>DateTime</type>
</CustomField>