force-app/main/default/objects/Pipeline__c/fields/Execution_Duration__c.field-meta.xml
<CustomField>
    <fullName>Execution_Duration__c</fullName>
    <description>Duration in Minutes</description>
    <label>Execution Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>