force-app/main/default/objects/Pipeline__c/fields/Execution_Started_On__c.field-meta.xml
<CustomField>
    <fullName>Execution_Started_On__c</fullName>
    <label>Execution Started On</label>
    <type>DateTime</type>
</CustomField>