force-app/main/default/objects/Pipeline__c/fields/Last_Deployment_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_Deployment_Result__c</fullName>
    <label>Last Deployment Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>