force-app/main/default/objects/Pipeline__c/fields/Pipeline_Runtime_Status__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Runtime_Status__c</fullName>
    <label>Pipeline Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Idle</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Waiting Approval</fullName>
            </value>
            <value>
                <fullName>Deploying</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Rollback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>