force-app/main/default/objects/Pipeline__c/fields/Pipeline_Type__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Type__c</fullName>
    <label>Pipeline Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Hotfix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>