force-app/main/default/objects/Pipeline__c/fields/QA_Approved__c.field-meta.xml
<CustomField>
    <fullName>QA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Approved</label>
    <type>Checkbox</type>
</CustomField>