force-app/main/default/objects/Pipeline__c/fields/QA_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>QA_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pipeline_QA_Approved_Bys</relationshipName>
    <type>Lookup</type>
</CustomField>