force-app/main/default/objects/Pipeline__c/fields/QA_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>QA_Approved_On__c</fullName>
    <label>QA Approved On</label>
    <type>DateTime</type>
</CustomField>