force-app/main/default/objects/Pipeline__c/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Environment</label>
    <referenceTo>Deployment_Environment__c</referenceTo>
    <relationshipName>Pipline</relationshipName>
    <type>Lookup</type>
</CustomField>