force-app/main/default/objects/Pipeline__c/fields/UAT_Approved__c.field-meta.xml
<CustomField>
    <fullName>UAT_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UAT Approved</label>
    <type>Checkbox</type>
</CustomField>