force-app/main/default/objects/Pipeline__c/fields/UAT_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>UAT_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UAT Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pipeline_UAT_Approved_Bys</relationshipName>
    <type>Lookup</type>
</CustomField>