force-app/main/default/objects/Pipeline__c/fields/UAT_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>UAT_Approved_On__c</fullName>
    <label>UAT Approved On</label>
    <type>DateTime</type>
</CustomField>